# license-discovery

./: CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
docs/architecture/: architecture.md  class_diagram.mmd  interfaces.mmd  overview.mmd  sequence_diagram.mmd
include/license_discovery/: clearly_defined_client.hpp
src/: clearly_defined_client.cpp  main.cpp
tests/: test_clearly_defined_client.cpp
